Пожелание: При отправке адресатам проверять заполненность поля Способ доставки в карточке исх.письма. Если поле не заполнено, выводить предупреждение.

--- a/GD.TransmitterModule/GD.TransmitterModule.Shared/Module.resx
+++ b/GD.TransmitterModule/GD.TransmitterModule.Shared/Module.resx
@@ -158,4 +158,7 @@
   <data name="GeneratedArchiveExceedsMaxSize" xml:space="preserve">
     <value>Sending documents exceeds the size limit for sending files via e-mail - {0} MB.</value>
   </data>
+  <data name="CorrespondentDeliveryMethodIsEmpty" xml:space="preserve">
+    <value>Correspondent {0} has no delivery method</value>
+  </data>
 </root>
