--- a/GD.TransmitterModule/GD.TransmitterModule.Shared/Module.ru.resx
+++ b/GD.TransmitterModule/GD.TransmitterModule.Shared/Module.ru.resx
@@ -158,4 +158,7 @@
   <data name="GeneratedArchiveExceedsMaxSize" xml:space="preserve">
     <value>Отправляемые документы превышают лимит размера отправляемых файлов по электронной почте - {0} Мб.</value>
   </data>
+  <data name="CorrespondentDeliveryMethodIsEmpty" xml:space="preserve">
+    <value>У корреспондента {0} не заполнен способ доставки</value>
+  </data>
 </root>
