--- a/GD.TransmitterModule/GD.TransmitterModule.Shared/Module.ru.resx
+++ b/GD.TransmitterModule/GD.TransmitterModule.Shared/Module.ru.resx
@@ -161,4 +161,10 @@
   <data name="CorrespondentDeliveryMethodIsEmpty" xml:space="preserve">
     <value>У корреспондента {0} не заполнен способ доставки</value>
   </data>
+  <data name="BusinessUnitCEOIsEmpty" xml:space="preserve">
+    <value>В организации {0} не указан руководитель</value>
+  </data>
+  <data name="DeliveryState_Error" xml:space="preserve">
+    <value>Ошибки отправки</value>
+  </data>
 </root>
