--- a/GD.TransmitterModule/GD.TransmitterModule.Shared/Module.ru.resx
+++ b/GD.TransmitterModule/GD.TransmitterModule.Shared/Module.ru.resx
@@ -107,7 +107,7 @@
     <value>В организации {0} не указан регистратор для вида документа {1}.</value>
   </data>
   <data name="UseReferralByCompetence" xml:space="preserve">
-    <value>Нельзя отправить данное письмо адресатам: {0}. Для отправки используйте задачу по перенаправлению обращения либо измените способ доставки.</value>
+    <value>Нельзя отправить данное письмо адресатам: {0}.</value>
   </data>
   <data name="AttachIsNotValid" xml:space="preserve">
     <value>Необходимо заполнить все обязательные свойства для вложений.</value>
