Доработки по трасмитеру часть 2

--- a/GD.TransmitterModule/GD.TransmitterModule.Shared/Module.resx
+++ b/GD.TransmitterModule/GD.TransmitterModule.Shared/Module.resx
@@ -167,4 +167,7 @@
   <data name="DeliveryState_Error" xml:space="preserve">
     <value>Error</value>
   </data>
+  <data name="DocumentNotFound" xml:space="preserve">
+    <value>Document not found</value>
+  </data>
 </root>
