--- a/GD.TransmitterModule/GD.TransmitterModule.Shared/Module.resx
+++ b/GD.TransmitterModule/GD.TransmitterModule.Shared/Module.resx
@@ -143,9 +143,6 @@
   <data name="IncomingRequestLetter" xml:space="preserve">
     <value>Incoming Request Letter</value>
   </data>
-  <data name="DirectumRXDeliveryMethod" xml:space="preserve">
-    <value>Directum RX</value>
-  </data>
   <data name="CounterpartyIsNotEmail" xml:space="preserve">
     <value>У корреспондента {0} не заполнен E-mail</value>
   </data>
@@ -169,5 +166,11 @@
   </data>
   <data name="DocumentNotFound" xml:space="preserve">
     <value>Document not found</value>
+  </data>
+  <data name="MailMethodNotFound" xml:space="preserve">
+    <value>The delivery method "Mail" was not found</value>
+  </data>
+  <data name="MethodMedoNotFound" xml:space="preserve">
+    <value>The delivery method "MEDO" was not found</value>
   </data>
 </root>
