--- a/GD.TransmitterModule/GD.TransmitterModule.Shared/ModuleSystem.ru.resx
+++ b/GD.TransmitterModule/GD.TransmitterModule.Shared/ModuleSystem.ru.resx
@@ -62,9 +62,12 @@
     <value>Отправка документов адресатам по e-mail.  </value>
   </data>
   <data name="AsyncHandler_Description_9d048f7c1b7844fcb37c4cb894a7db97" xml:space="preserve">
-    <value>Отправка документов адресатам</value>
+    <value>Отправка документов адресатам RX-RX</value>
   </data>
   <data name="AsyncHandler_Description_ec4fa070216a4b5cb01de7b00e00dc07" xml:space="preserve">
     <value>Обработчик ошибок в сценарии создания входящего документа в задаче RX-RX</value>
+  </data>
+  <data name="AsyncHandler_Description_a21c3b60728d4eee927df734f406f5d3" xml:space="preserve">
+    <value>Отправка документов адресатам по МЭДО </value>
   </data>
 </root>
