--- a/GD.TransmitterModule/GD.TransmitterModule.Shared/ModuleSystem.ru.resx
+++ b/GD.TransmitterModule/GD.TransmitterModule.Shared/ModuleSystem.ru.resx
@@ -70,4 +70,10 @@
   <data name="AsyncHandler_Description_a21c3b60728d4eee927df734f406f5d3" xml:space="preserve">
     <value>Отправка документов адресатам по МЭДО </value>
   </data>
+  <data name="JobDisplayName_6262541de389484686a97f487dffeb0c" xml:space="preserve">
+    <value>Исходящие. RX-RX. Актуализация статусов в отправленных документах</value>
+  </data>
+  <data name="JobDescription_6262541de389484686a97f487dffeb0c" xml:space="preserve">
+    <value>Актуализирует статусы обработки документа у корреспондентов</value>
+  </data>
 </root>
