--- a/GD.TransmitterModule/GD.TransmitterModule.Shared/ModuleSystem.ru.resx
+++ b/GD.TransmitterModule/GD.TransmitterModule.Shared/ModuleSystem.ru.resx
@@ -71,7 +71,7 @@
     <value>Отправка документов адресатам по МЭДО </value>
   </data>
   <data name="JobDisplayName_6262541de389484686a97f487dffeb0c" xml:space="preserve">
-    <value>Исходящие. RX-RX. Актуализация статусов в отправленных документах</value>
+    <value>Исходящие. RX-RX. Актуализация статусов в отправленных документах в рамках системы</value>
   </data>
   <data name="JobDescription_6262541de389484686a97f487dffeb0c" xml:space="preserve">
     <value>Актуализирует статусы обработки документа у корреспондентов</value>
