--- a/GD.TransmitterModule/GD.TransmitterModule.Shared/IncomingDocumentProcessingTask/IncomingDocumentProcessingTaskSystem.ru.resx
+++ b/GD.TransmitterModule/GD.TransmitterModule.Shared/IncomingDocumentProcessingTask/IncomingDocumentProcessingTaskSystem.ru.resx
@@ -103,4 +103,13 @@
   <data name="Property_GeneratedFrom" xml:space="preserve">
     <value>Создана из</value>
   </data>
+  <data name="Block_b2ac50bcf87443e5963071b7d361ff8e" xml:space="preserve">
+    <value>Создание/синхронизация входящего документа</value>
+  </data>
+  <data name="Block_9868d256c88943ac9919331f84b15743" xml:space="preserve">
+    <value>Задание на регистрацию</value>
+  </data>
+  <data name="Block_3d0f729a4f764ec994b580841fefbf3a" xml:space="preserve">
+    <value>Задание на доработку</value>
+  </data>
 </root>
