Отправка нескольким адресатам на e-mail

--- a/GD.TransmitterModule/GD.TransmitterModule.Shared/MailRegister/MailRegisterSystem.resx
+++ b/GD.TransmitterModule/GD.TransmitterModule.Shared/MailRegister/MailRegisterSystem.resx
@@ -142,4 +142,7 @@
   <data name="Property_MaxProcessingRecordsPerRun" xml:space="preserve">
     <value />
   </data>
+  <data name="Property_Addressee" xml:space="preserve">
+    <value>Addressee</value>
+  </data>
 </root>
