--- a/GD.TransmitterModule/GD.TransmitterModule.Shared/Module.ru.resx
+++ b/GD.TransmitterModule/GD.TransmitterModule.Shared/Module.ru.resx
@@ -135,7 +135,7 @@
     <value>Отправлено</value>
   </data>
   <data name="DeliveryState_Return" xml:space="preserve">
-    <value>Возврат</value>
+    <value>Отказано в регистрации</value>
   </data>
   <data name="DeliveryState_RedirectedTo" xml:space="preserve">
     <value>Перенаправлено</value>
@@ -162,7 +162,7 @@
     <value>В организации {0} не указан руководитель</value>
   </data>
   <data name="DeliveryState_Error" xml:space="preserve">
-    <value>Ошибки отправки</value>
+    <value>Ошибка отправки</value>
   </data>
   <data name="DocumentNotFound" xml:space="preserve">
     <value>Документ не найден.</value>
@@ -186,5 +186,8 @@
   </data>
   <data name="EmailDuplicate" xml:space="preserve">
     <value>E-mail {0} повторяется для нескольких адресатов</value>
+  </data>
+  <data name="DeliveryState_Delivered" xml:space="preserve">
+    <value>Доставлено</value>
   </data>
 </root>
