Rx-Rx. Убраны дубли строк в ТЧ Адресаты при перенаправлении

--- a/GD.TransmitterModule/GD.TransmitterModule.Shared/IncomingDocumentProcessingTask/IncomingDocumentProcessingTaskSystem.ru.resx
+++ b/GD.TransmitterModule/GD.TransmitterModule.Shared/IncomingDocumentProcessingTask/IncomingDocumentProcessingTaskSystem.ru.resx
@@ -124,4 +124,7 @@
   <data name="Block_d3579cf309fa489eaba9672c085d5594_Property_e4f67966b9864c608dbeefaf3192779d" xml:space="preserve">
     <value>Комментарий</value>
   </data>
+  <data name="Block_d3579cf309fa489eaba9672c085d5594_Property_7feea017f6ab4a779afa0c88c993d3b6" xml:space="preserve">
+    <value>Новый корреспондент</value>
+  </data>
 </root>
