--- a/GD.TransmitterModule/GD.TransmitterModule.Shared/IncomingDocumentProcessingTask/IncomingDocumentProcessingTaskSystem.resx
+++ b/GD.TransmitterModule/GD.TransmitterModule.Shared/IncomingDocumentProcessingTask/IncomingDocumentProcessingTaskSystem.resx
@@ -142,4 +142,7 @@
   <data name="Block_d3579cf309fa489eaba9672c085d5594_Property_e4f67966b9864c608dbeefaf3192779d" xml:space="preserve">
     <value>Comment</value>
   </data>
+  <data name="Block_d3579cf309fa489eaba9672c085d5594_Property_7feea017f6ab4a779afa0c88c993d3b6" xml:space="preserve">
+    <value>New correspondent</value>
+  </data>
 </root>
