--- a/GD.TransmitterModule/GD.TransmitterModule.Shared/Module.resx
+++ b/GD.TransmitterModule/GD.TransmitterModule.Shared/Module.resx
@@ -159,7 +159,7 @@
     <value>Correspondent {0} has no delivery method</value>
   </data>
   <data name="BusinessUnitCEOIsEmpty" xml:space="preserve">
-    <value>CEO for business unit {0} is empty</value>
+    <value>CEO for business unit {0} is empty.</value>
   </data>
   <data name="DeliveryState_Error" xml:space="preserve">
     <value>Error</value>
