--- a/GD.TransmitterModule/GD.TransmitterModule.Shared/ModuleSystem.resx
+++ b/GD.TransmitterModule/GD.TransmitterModule.Shared/ModuleSystem.resx
@@ -94,4 +94,7 @@
   <data name="JobDescription_6262541de389484686a97f487dffeb0c" xml:space="preserve">
     <value>Updates document processing statuses for correspondents</value>
   </data>
+  <data name="sf_251d16fb_318a_4960_b831_862a25154a8d" xml:space="preserve">
+    <value>Folder</value>
+  </data>
 </root>
