Единый статус отправки
* Единый статус отправки [Rx]

* Информация по статусу

* Rx-Rx. Убраны дубли строк в ТЧ Адресаты при перенаправлении

* Добавлены проверки на наличие руководителя НОР и настроек регистрации при перенаправлении

* Добавлена точка в сообщении об ошибке

* Правка варианта процесса

* Поддержка изменений решений ОГВ + новый блок смены статуса

* Информация по статусу обрезается до длины свойства

* Убрано время из даты регистрации [Rx]

* Rx-Rx. Накопление информации по статусам в реестре

* ИСХ. Удалять дубли адресатов при отправке

* Правка ошибок после слияния с 4.12

* Правка схемы по-умолчанию

* Фиксация изменения

---------

Co-authored-by: Pushina_TL <Pushina_TL@directum.ru>
Co-authored-by: Подлевских Татьяна <podlevskikh_ta@directum.ru>

--- a/GD.TransmitterModule/GD.TransmitterModule.Shared/Module.resx
+++ b/GD.TransmitterModule/GD.TransmitterModule.Shared/Module.resx
@@ -135,7 +135,7 @@
     <value>Sent</value>
   </data>
   <data name="DeliveryState_Return" xml:space="preserve">
-    <value>Return</value>
+    <value>Registration denied</value>
   </data>
   <data name="DeliveryState_RedirectedTo" xml:space="preserve">
     <value>Redirected</value>
@@ -159,7 +159,7 @@
     <value>Correspondent {0} has no delivery method</value>
   </data>
   <data name="BusinessUnitCEOIsEmpty" xml:space="preserve">
-    <value>CEO for business unit {0} is empty</value>
+    <value>CEO for business unit {0} is empty.</value>
   </data>
   <data name="DeliveryState_Error" xml:space="preserve">
     <value>Error</value>
@@ -192,5 +192,11 @@
   </data>
   <data name="AddresseeWrongEmail" xml:space="preserve">
     <value>The Addressee {0} format of the email address is incorrect.</value>
+  </data>
+  <data name="DeliveryState_Delivered" xml:space="preserve">
+    <value>Delivered</value>
+  </data>
+  <data name="AddresseesDuplicateExists" xml:space="preserve">
+    <value>Duplicate addressees found. Delete?</value>
   </data>
 </root>
